--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/pets?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=demo
-#spring.datasource.password=Demo@1234
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.datasource.hikari.maximum-pool-size=10
-#hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.JBossAppServerJtaPlatfo
-#spring.jpa.open-in-view=true
-#spring.jpa.properties.hibernate.cache.use_second_level_cache=true
-#hibernate.transaction.jta.platform=com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+# Database configuration for PostgreSQL
+spring.datasource.url=jdbc:postgresql://dpg-ct1r67dumphs738rtmg0-a.oregon-postgres.render.com/database_render_patterns_dms_79qs
+spring.datasource.username=database_render_patterns_dms_79qs_user
+spring.datasource.password=NUiHqv7hLkqIuPTDiioGsq01V1fAYDM0
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-server.tomcat.accesslog.enabled=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate and JPA settings for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://postgresql://database_render_patterns_dms_79qs_user:NUiHqv7hLkqIuPTDiioGsq01V1fAYDM0@dpg-ct1r67dumphs738rtmg0-a.oregon-postgres.render.com/database_render_patterns_dms_79qs
-spring.datasource.username= database_render_patterns_dms_79qs_user
-spring.datasource.password= NUiHqv7hLkqIuPTDiioGsq01V1fAYDM0
-spring.datasource.driver-class-name=org.postgresql.Driver3
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+
+# HikariCP connection pool settings
+spring.datasource.hikari.maximum-pool-size=10
+
+# Enable Tomcat access log
+server.tomcat.accesslog.enabled=true
